// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Screen /> > renders with default desktop position and size 1`] = `
.c1 {
  background-color: #000;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
  image-rendering: pixelated;
}

.c0 {
  background-color: #000;
  border: solid 1px #000;
  overflow: visible;
  width: 100dvw;
  height: calc(100dvw * 2 / 3);
}

@media only screen and (min-width: 600px) {
  .c0 {
    width: min(       calc(100dvw - 285px),       calc(85dvh * 3 / 2)     );
    height: 85dvh;
  }
}

<div
  class="c0 react-draggable"
  data-testid="screen-wrapper"
  style="position: absolute; user-select: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(520px,30px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <canvas
    class="c1"
    data-testid="screen-wrapper:render-canvas"
    height="160"
    width="240"
  />
  <div />
</div>
`;

exports[`<Screen /> > renders with default mobile position and size 1`] = `
.c1 {
  background-color: #000;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
  max-height: 100%;
  max-width: 100%;
  object-fit: contain;
  image-rendering: pixelated;
}

.c0 {
  background-color: #000;
  border: solid 1px #000;
  overflow: visible;
  width: 100dvw;
  height: calc(100dvw * 2 / 3);
}

@media only screen and (min-width: 600px) {
  .c0 {
    width: min(       calc(100dvw - 285px),       calc(85dvh * 3 / 2)     );
    height: 85dvh;
  }
}

<div
  class="c0 react-draggable"
  data-testid="screen-wrapper"
  style="position: absolute; user-select: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,0px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <canvas
    class="c1"
    data-testid="screen-wrapper:render-canvas"
    height="160"
    width="240"
  />
  <div />
</div>
`;
